--- a/2022naturalbeat_1127.html
+++ b/2022naturalbeat_1127.html
@@ -13,7 +13,7 @@
     <meta name="description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
     <meta property="og:title" content="TORIHADA LABO">
     <meta property="og:description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
-    <meta property="og:image" content="img/main_01.png">
+    <meta property="og:image" content="img/logo.png">
     <meta property="og:image:alt" content="TORIHADA LABO">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
@@ -38,6 +38,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link href=" http://fonts.cdnfonts.com/css/snell-roundhand " rel="stylesheet">
     <!--自作のCSS-->
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/parts.css">
@@ -59,8 +60,8 @@
                         <span class="border-yellow">リズム(Rhythm&Time)</span></span><br>
                     <span class="">心と身体に眠る感覚を</span><br>
                     <span class="">呼び起こそう</span><br>
-                    <span class="">宮崎県内を</span>
-                    <span class="">中心に公演・ワークショップを行います</span></p>
+                    <span class="">宮崎県内</span>
+                    <span class="">幼保園・児童福祉施設を中心に訪問します</span></p>
             </div>
             <!--/header_area-->
             <div>
@@ -86,47 +87,106 @@
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
-                    <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
-                    <li><a href="inquiry.html">お問い合わせ</a></li>
+					<li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
+					<li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
             </div>
         </nav>
         <div class="circle-bg"></div>
         <main>
+            <section id="concept" class="inner">
+                <h2 class="flipRightTopTrigger"><span style="font-family: 'Snell Roundhand', sans-serif; text-transform: capitalize; font-weight: 800;">Natural Beat 2022 </span><br>-五感で見つける幸せな空間-
+                </h2>
+            </section>
             <div class="container" style="min-height: 100vh;">
                 <div class="row">
-                    <div class="card border-0" style="height: 780px; width: fit-content; background-color: #f0f0f0;">
-                        <div id="inquiry" class="card-body">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDLWtQlmEQ53geqCGGmqi9uFlNi-qf_3TWqKk7RIvp3sHMIQ/viewform?embedded=true" width="1400" height="770"
-                                border-color="#f0f0f0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                    <div class="card col-md-6 col-sm-6 border-0" style="background-color: #f0f0f0; margin: 0 auto;">
+                        <img src="img/naturalbeat2022.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Natural Beat 2022
+                            </h5>
+                            <p class="card-text">
+                                会場: Salle Mandjar （サル・マンジャー） <br>住所：宮崎県宮崎市船塚2丁目17<br> 日時：2022年11月27日(日)
+                                <br>音響: 3,000-（80席限定）<br>14時開場 14時30分開演<br>
+                                <br>料金: 有限会社 INGLE SIDE <br>主催/企画制作: 一般社団法人TORIHADA LABO<br>
+                                問い合わせ先： 050-3138-2019 <br>
+
+                            </p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="img-gallery fadeUpTrigger">
-                <ul class="slider2">
-                    <li><img src="img/gal_01.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_02.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_03.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_04.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_05.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_06.png" alt="" class="img-fluid"></li>
-                    <li><img src="img/gal_07.png" alt="" class="img-fluid"></li>
-                    <!--/slider2-->
-                </ul>
-                <!--/img-gallery-->
-            </div>
-            <section id="contact">
-                <div class="contact-detail fadeUpTrigger">
-                    <h2>さぁ、君だけの五感を<br>フルに解放しよう！</h2>
-                    <p>お気軽に<br>お問い合わせください。</p>
-                    <ul>
-                        <li><a href="inquiry.html" class="btn06 btnarrow2">資料請求</a></li>
-                        <li><a href="inquiry.html" class="btn06 btnarrow2">お問い合わせ</a></li>
-                    </ul>
-                </div>
-                <!--/contact-detail-->
-            </section>
+
+                    <div class="card col-md-12 col-sm-12 border-0]" style="background-color: #f0f0f0;">
+                        <div class="card-body">
+                            <li class="list-group-item border-0" style="background-color: #f0f0f0;">
+                                <strong>予約フォーム</strong>
+                            </li>
+                        </div>
+                        <div class="card-body border-0">
+                            <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfHCIxvsBzb9xKCFe0f3mGVIhGvtbSuncL6zKBOM7XsERWL7A/viewform?embedded=true"
+                                class="col-md-12 col-sm-12 border-0" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe> -->
+                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMJp7pWu5GSj0SxhDi8BVhs7Vzh3hGwtOkhShNN-PX1Vf-5g/viewform?embedded=true"
+                                class="col-md-12 col-sm-12 border-0" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                        </div>
+                    </div>
+
+                    <div class="card col-md-12 col-sm-12 border-0]" style="background-color: #f0f0f0;">
+                        <div class="card-body">
+                            <li class="list-group-item border-0" style="background-color: #f0f0f0;">
+                                <strong>会場マップ</strong><br> 会場 Salle Mandjar （サル・マンジャー） </li>
+                        </div>
+
+                        <div class="card col-md-12 col-sm-12 border-0 " style="min-height: 100vh; background-color: #f0f0f0;">
+                            <div class="mapouter">
+                                <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                                        src="https://maps.google.com/maps?width=800&amp;height=1000&amp;hl=en&amp;q=宮崎県宮崎市船塚２丁目１７ &amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                                        href="https://mcpenation.com/">Minecraft Website</a></div>
+                                <style>
+                                    .mapouter {
+                                        position: relative;
+                                        text-align: right;
+                                        width: 100%;
+                                        height: 1000px;
+                                    }
+
+                                    .gmap_canvas {
+                                        overflow: hidden;
+                                        background: none !important;
+                                        width: 100%;
+                                        height: 1000px;
+                                    }
+
+                                    .gmap_iframe {
+                                        height: 1000px !important;
+                                    }
+                                </style>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="img-gallery fadeUpTrigger">
+                            <ul class="slider2">
+                                <li><img src="img/gal_01.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_02.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_03.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_04.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_05.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_06.png" alt="" class="img-fluid"></li>
+                                <li><img src="img/gal_07.png" alt="" class="img-fluid"></li>
+                                <!--/slider2-->
+                            </ul>
+                            <!--/img-gallery-->
+                        </div>
+                        <section id="contact">
+                            <div class="contact-detail fadeUpTrigger">
+                                <h2>さぁ、君だけの五感を<br>フルに解放しよう！</h2>
+                                <p>お気軽に<br>お問い合わせください。</p>
+                                <ul>
+                                    <li><a href="inquiry.html" class="btn06 btnarrow2">資料請求</a></li>
+                                    <li><a href="inquiry.html" class="btn06 btnarrow2">お問い合わせ</a></li>
+                                </ul>
+                            </div>
+                            <!--/contact-detail-->
+                        </section>
         </main>
         <footer id="footer" class="inner">
             <div class="footer-area">
@@ -166,36 +226,11 @@
                 </div>
                 <!-- /footer-area -->
             </div>
-            <div class="company_info">
-                <h3> Company Infomaition </h3>
-                <p>会社概要</p>
-                <table>
-                    <tr>
-                        <td>社名</td>
-                        <td>一般社団法人TORIHADA LABO</td>
-                    </tr>
-                    <tr>
-                        <td>創業</td>
-                        <td>令和4年3月14日</td>
-                    </tr>
-                    <tr>
-                        <td>所在地</td>
-                        <td>宮崎県宮崎市宮崎駅東1丁目5番地1サーパス宮崎</td>
-                    </tr>
-                    <tr>
-                        <td>事業</td>
-                        <td>1.東洋西洋音楽の普及事業</td>
-                    </tr>
-                    <td>内容</td>
-                    <td>2.音楽文化の発展のための事業</td>
-                    </tr>
-                </table>
+            <div>
+                <small>&copy; TORIHADA LABO</small>
             </div>
             <div>
-                <small>&copy; Torihada Labo Inc.</small>
-            </div>
-            <div>
-                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio 〜みんなにITの力を！ </a></small>
+                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio ~みんなにITの力を！ </a></small>
             </div>
             <p id="page-top"><a href="#"><span>Page<br>Top</span></a></p>
         </footer>
