--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
+                <li> <a href="2022naturalbeat_1127.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
             </ul>
         </header>
         <main>
@@ -140,7 +140,7 @@
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Shino</li>
                                         <li class="list-group-item">Piano.Vocal.Total</li>
-                                        <li class="list-group-item">TORIHADA LABO代表<br> 島村楽器ヴォーカル科講師<br> 宮崎県日南市出身<br>
+                                        <li class="list-group-item">(一社)TORIHADA LABO代表<br> 島村楽器ヴォーカル科講師<br> 宮崎県日南市出身<br>
                                         </li>
                                         <li class="list-group-item">子ども向けイベント出演歴<br> NPO法人みやざき子ども文化センター × 公益財団法人宮崎文化進行協会主催<br> 0歳からの親子で楽しむコンサート<br> NPO法人みやざき子ども文化センター主催<br> おいでおいで子どもフェスタ他多数 </li>
                                     </ul>
@@ -151,11 +151,11 @@
                             <div class="card border border-warning shadow">
                                 <img src="img/women02.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h4 class="card-title">井上さつき</h4>
+                                    <h4 class="card-title">satsuki</h4>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Satsuki Inoue</li>
                                         <li class="list-group-item">Koto</li>
-                                        <li class="list-group-item">TORIHADA LABO副代表<br> 箏曲生田流宮城社大師範<br> 宮崎県宮崎市出身<br>
+                                        <li class="list-group-item">(一社)TORIHADA LABO副代表<br> 箏曲生田流宮城社大師範<br> 宮崎県宮崎市出身<br>
                                         </li>
                                         <li class="list-group-item">子ども向けイベント出演歴<br> 一般社団法人宮崎県教職員互助会主催スクールコンサート<br> NPO法人宮崎子ども文化センター主催学校訪問ふるさと先生のサポート </li>
                                     </ul>
@@ -206,7 +206,7 @@
                 <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                 <li><a href="babyjazz.html">BABY JAZZ</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                 <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
             </ul>
@@ -245,7 +245,7 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                    <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                     <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
