--- a/news.html
+++ b/news.html
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
+                <li> <a href="2022naturalbeat_1127.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
             </ul>
         </header>
         <main>
@@ -86,12 +86,50 @@
             <section id="concept" class="inner">
                 <h2 class="flipRightTopTrigger"><span>News</span>お知らせ</h2>
             </section>
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/2022babyjazz_o_0923.jpg" class="w-100" alt="2022 BABY JAZZ">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_16">
+                    <ul class="list-group" id="news_16">
+                        <li class="list-group-item active" aria-current="true">2022 Natural Beat<br> 〜&nbsp;五感で見つける幸せな空間&nbsp;〜</li>
+                        <li class="list-group-item">会場 :Salle Mandjar (サル・マンジャー)<br>
+                            <hr>日時:2022年11月27日(日)<br>
+                            <hr>14:00開場/14:30開演<br>
+                            <hr>音響:有限会社 INGLE SIDE<br>
+                            <hr>主催/企画制作:一般社団法人TORIHADA LABO <br>
+                            <hr>問い合わせ先:050-3138-2019 <br>
+                        <li class="list-group-item"> <a href="news.html#news_16" class="btn btn-primary">詳細はこちらをクリック</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/2022babyjazz_o_0923.jpg" class="w-100" alt="2022 BABY JAZZ">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_15">
+                    <ul class="list-group" id="news_15">
+                        <li class="list-group-item active" aria-current="true">Baby Jazz2022 <br> 〜&nbsp;音描くの旅&nbsp;〜</li>
+                        <li class="list-group-item">会場 :都城まちなか交流センター・まちなか広場<br>
+                            <hr> 日時:2022年9月23日(金祝)<br>
+                            <hr>13:30開演/15:00終演予定<br>
+                            <hr>主催:TORIHADA LABO <br>
+                            <hr>屋外開催の為、観覧は自由となります。<br>
+                                お席のご用意には限りがございますので席の確保をご希望のお客様はお早めに会場へお越し下さい。 <br>
+                                ※申し込み不要<br>
+                        <li class="list-group-item"> <a href="https://www.my-machitan.jp/event/220923_babyjazz/" class="btn btn-primary">詳細はこちらをクリック</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <hr>
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
                     <img src="img/babyjazz_cd.jpg" class="w-100" alt="2021natural beat">
                 </div>
-                <div class="col-md-6 p-4 ps-md-0" id="news_13">
+                <div class="col-md-6 p-4 ps-md-0" id="news_15">
                     <ul class="list-group" id="news_15">
                         <li class="list-group-item active" aria-current="true">1st Album<br>“Baby Jazz”リリース！</li>
                         <li class="list-group-item">◆『Baby Jazz』<br>早期購入特典◆<br>
@@ -110,14 +148,14 @@
                     <img src="img/babyjazz_2022.JPG" class="w-100" alt="2021natural beat">
                 </div>
                 <div class="col-md-6 p-4 ps-md-0" id="news_14">
-                    <ul class="list-group" id="news_13">
+                    <ul class="list-group" id="news_14">
                         <li class="list-group-item active" aria-current="true">2022 Baby Jazz <br>#その夢がいーじゃん<br>#叶えればいーじゃん</li>
                         <li class="list-group-item">会場：宮崎県立芸術劇場 <br>
                             <hr> 日時：2022年9月24日(土)<br>
                             <hr>開場14時00分～開演14時30分<br>
                             <hr>主催:TORIHADA LABO <br>
                             <hr>※インターネット予約は宮崎県立芸術劇場HPから7/10(日)より承ります。<br>
-                        <li class="list-group-item"> <a href="https://miyazaki-ac.jp/ticket-center/" class="btn btn-primary">チケットのご予約は<br>こちらをクリック</a>
+                        <li class="list-group-item"> <a href="https://miyazaki-ac.jp/event/2022/8903/" class="btn btn-primary">チケットのご予約は<br>こちらをクリック</a>
                         </li>
                     </ul>
                 </div>
@@ -365,7 +403,7 @@
                 <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                 <li><a href="babyjazz.html">BABY JAZZ</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                 <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
             </ul>
@@ -405,7 +443,7 @@
                         <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                         <li><a href="babyjazz.html">BABY JAZZ</a></li>
                         <li><a href="news.html">NEWS</a></li>
-                        <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                        <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                         <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                         <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
