--- a/passed/2022baby_jazz.html
+++ b/passed/2022baby_jazz.html
@@ -111,7 +111,7 @@
           <div class="card col-md-6 col-sm-6 border-0 mt-5]" style="background-color: #f0f0f0;">
             <img src="img/2022babyjazz_u.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <li class="list-group-item border-0" style="background-color: #f0f0f0;"> ※インターネット予約は<a href="https://miyazaki-ac.jp/ticket-center/">宮崎県立芸術劇場HP</a>から7/10(日)より承ります。<br>
+              <li class="list-group-item border-0" style="background-color: #f0f0f0;"> ※インターネット予約は<a href="https://miyazaki-ac.jp/event/2022/8903/">宮崎県立芸術劇場HP</a>から7/10(日)より承ります。<br>
                 ※3歳以上はチケット必要。3歳未満でもお席が必要な場合はチケットをお求めください。<br>受付期間:2022/7/10(日)10:00～2022/7/23(金)18:30まで</li>
             </div>
           </div>
@@ -150,7 +150,64 @@
           </div>
         </div>
       </div>
+            <section id="concept" class="inner">
+        <h2 class="flipRightTopTrigger"><span>Baby Jazz 2022 都城公演</span></h2>
+      </section>
+      <div class="container" style="min-height: 100vh;">
+        <div class="row">
+          <div class="card col-md-6 col-sm-6 border-0" style="background-color: #f0f0f0;">
+            <img src="img/2022babyjazz_o_0923.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title mb-0">Baby Jazz2022〜音描くの旅〜</h4>
+              <p class="card-text">会場 :都城まちなか交流センター・まちなか広場<br>日時:2022年9月23日(金祝) <br> 13:30開演/15:00終演予定</p>
+            </div>
+          </div>
+          <div class="card col-md-6 col-sm-6 border-0 mt-5]" style="background-color: #f0f0f0;">
+            <img src="img/2022babyjazz_u_0923.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <li class="list-group-item border-0" style="background-color: #f0f0f0;">屋外開催の為、観覧は自由となります。
+                  <br> お席のご用意には限りがございますので席の確保をご希望のお客様はお早めに会場へお越し下さい。<br> ※申し込み不要
+                  <br>詳細は都城まちづくり株式会社<a href="https://www.my-machitan.jp/event/220923_babyjazz/">「まちたん」</a>をご覧下さい。<br>
 
+
+              </li>
+            </div>
+          </div>
+          <div class="card col-md-12 col-sm-12 border-0]" style="background-color: #f0f0f0;">
+            <div class="card-body">
+              <li class="list-group-item border-0" style="background-color: #f0f0f0;">
+                <strong>会場マップ</strong><br>会場 :都城まちなか交流センター・まちなか広場<br> 住所 宮崎県都城市中町17街区19号
+              </li>
+            </div>
+          </div>
+          <div class="card col-md-12 col-sm-12 border-0 mb-5" style="min-height: 100vh; background-color: #f0f0f0;">
+            <div class="mapouter">
+              <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                  src="https://maps.google.com/maps?width=800&amp;height=1000&amp;hl=en&amp;q=宮崎県宮崎市船塚２丁目１７ &amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                  href="https://mcpenation.com/">Minecraft Website</a></div>
+              <style>
+                .mapouter {
+                  position: relative;
+                  text-align: right;
+                  width: 100%;
+                  height: 1000px;
+                }
+
+                .gmap_canvas {
+                  overflow: hidden;
+                  background: none !important;
+                  width: 100%;
+                  height: 1000px;
+                }
+
+                .gmap_iframe {
+                  height: 1000px !important;
+                }
+              </style>
+            </div>
+          </div>
+        </div>
+      </div>
       <section id="contact">
         <div class="mt-5 contact-detail fadeUpTrigger">
           <h2>さぁ、君だけの五感を<br>フルに解放しよう！</h2>
