--- a/torihada.html
+++ b/torihada.html
@@ -73,7 +73,8 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
+                <li> <a href="2022naturalbeat_1127.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
+                <!-- <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li> -->
             </ul>
         </header>
         <main>
@@ -200,7 +201,7 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                    <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                     <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
@@ -240,7 +241,7 @@
                             <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                             <li><a href="babyjazz.html">BABY JAZZ</a></li>
                             <li><a href="news.html">NEWS</a></li>
-                            <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                            <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
                             <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                             <li><a href="inquiry.html">お問い合わせ</a></li>
                         </ul>
