--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
                             <hr>音響:有限会社 INGLE SIDE<br>
                             <hr>主催/企画制作:一般社団法人TORIHADA LABO <br>
                             <hr>問い合わせ先:050-3138-2019 <br>
-                        <li class="list-group-item"> <a href="news.html#news_16" class="btn btn-primary">詳細はこちらをクリック</a>
+                        <li class="list-group-item"> <a href="2022naturalbeat_1127.html" class="btn btn-primary">詳細はこちらをクリック</a>
                         </li>
                     </ul>
                 </div>
