--- a/news.html
+++ b/news.html
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="2022naturalbeat_1127.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
+                <li> <a href="2023naturalbeat_1203.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
             </ul>
         </header>
         <main>
@@ -86,9 +86,54 @@
             <section id="concept" class="inner">
                 <h2 class="flipRightTopTrigger"><span>News</span>お知らせ</h2>
             </section>
+            <!-- /////////////////////////////////////////////////// -->
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
-                    <img src="img/2022babyjazz_o_0923.jpg" class="w-100" alt="2022 BABY JAZZ">
+                    <img src="img/naturalbeat2023.jpg" class="w-100" alt="2022 BABY JAZZ">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_18">
+                    <ul class="list-group" id="news_16">
+                        <li class="list-group-item active" aria-current="true">2023 Natural Beat<br> 〜&nbsp;五感で見つける幸せな空間&nbsp;〜</li>
+                        <li class="list-group-item">会場 :三股町立文化会館<br>
+                            <hr>日時:2023年12月3日(日)<br>
+                            <hr>15時半開場 16時開演<br>
+                            <hr>音響:ライフミュージック<br>
+                            <hr>後援：宮崎県教育委員会<br>
+                            <hr>主催/企画制作:一般社団法人TORIHADA LABO <br>
+                            <hr>問い合わせ先:050-3138-2019 <br>
+                            <li class="list-group-item">
+                                <a href="2023naturalbeat_1203.html" class="btn btn-primary">
+                                詳細はこちらをクリック
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <!-- /////////////////////////////////////////////////// -->
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/2023babyjazz_o_0924.jpg" class="w-100" alt="2022 BABY JAZZ">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_17">
+                    <ul class="list-group" id="news_15">
+                        <li class="list-group-item active" aria-current="true">Baby Jazz2023 <br> 〜&nbsp;奏でる・踊る・描く&nbsp;〜</li>
+                        <li class="list-group-item">会場 :都城 Mallmallまちなか広場<br>
+                            <hr> 日時:2023年9月24日(日)<br>
+                            <hr>13:30開演/15:30終演予定<br>
+                            <hr>主催:都城まちづくり株式会社<br>
+                            <hr>企画:TORIHADA LABO<br>
+                            <hr>屋外開催の為、観覧は自由となります。<br>
+                                お席のご用意には限りがございますので席の確保をご希望のお客様はお早めに会場へお越し下さい。 <br>
+                                ※申し込み不要<br>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <!-- /////////////////////////////////////////////////// -->
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/naturalbeat2022.jpg" class="w-100" alt="2022 BABY JAZZ">
                 </div>
                 <div class="col-md-6 p-4 ps-md-0" id="news_16">
                     <ul class="list-group" id="news_16">
@@ -105,6 +150,7 @@
                 </div>
             </div>
             <hr>
+            <!-- /////////////////////////////////////////////////// -->
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
                     <img src="img/2022babyjazz_o_0923.jpg" class="w-100" alt="2022 BABY JAZZ">
@@ -403,7 +449,7 @@
                 <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                 <li><a href="babyjazz.html">BABY JAZZ</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
+                <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
                 <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
             </ul>
@@ -443,7 +489,7 @@
                         <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                         <li><a href="babyjazz.html">BABY JAZZ</a></li>
                         <li><a href="news.html">NEWS</a></li>
-                        <li><a href="2022naturalbeat_1127.html">2022 Natural Beat</a></li>
+                        <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
                         <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                         <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
