--- a/2023naturalbeat_1203.html
+++ b/2023naturalbeat_1203.html
@@ -95,53 +95,47 @@
         <div class="circle-bg"></div>
         <main>
             <section id="concept" class="inner">
-                <h2 class="flipRightTopTrigger"><span style="font-family: 'Snell Roundhand', sans-serif; text-transform: capitalize; font-weight: 800;">Natural Beat 2022 </span><br>-五感で見つける幸せな空間-
+                <h2 class="flipRightTopTrigger">
+                    <span style="font-family: 'Snell Roundhand', sans-serif; text-transform: capitalize; font-weight: 800;">
+                        Natural Beat 2023
+                    </span><br>-五感で見つける幸せな空間-
                 </h2>
             </section>
             <div class="container" style="min-height: 100vh;">
                 <div class="row">
                     <div class="card col-md-6 col-sm-6 border-0" style="background-color: #f0f0f0; margin: 0 auto;">
-                        <img src="img/naturalbeat2022.jpg" class="card-img-top" alt="...">
+                        <img src="img/naturalbeat2023.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">
-                                Natural Beat 2022
+                                Natural Beat 2023
                             </h5>
                             <p class="card-text">
-                                会場: Salle Mandjar （サル・マンジャー） <br>住所：宮崎県宮崎市船塚2丁目17<br> 日時：2022年11月27日(日)
-                                <br>音響: 3,000-（80席限定）<br>14時開場 14時30分開演<br>
-                                <br>料金: 有限会社 INGLE SIDE <br>主催/企画制作: 一般社団法人TORIHADA LABO<br>
+                                会場: 三股町立文化会館 <br>住所：宮崎県北諸県郡三股町樺山３４０４−２<br> 日時：2023年12月3日(日)
+                                <br>料金: 1,500-<br>15時半開場 16時開演<br>
+                                <br>音響: ライフミュージック <br>後援：宮崎県教育委員会<br>主催/企画制作: 一般社団法人TORIHADA LABO<br>
                                 問い合わせ先： 050-3138-2019 <br>
 
                             </p>
                         </div>
                     </div>
 
-                    <div class="card col-md-12 col-sm-12 border-0]" style="background-color: #f0f0f0;">
-                        <div class="card-body">
-                            <li class="list-group-item border-0" style="background-color: #f0f0f0;">
-                                <strong>予約フォーム</strong>
-                            </li>
-                        </div>
-                        <div class="card-body border-0">
-                            <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfHCIxvsBzb9xKCFe0f3mGVIhGvtbSuncL6zKBOM7XsERWL7A/viewform?embedded=true"
-                                class="col-md-12 col-sm-12 border-0" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe> -->
-                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMJp7pWu5GSj0SxhDi8BVhs7Vzh3hGwtOkhShNN-PX1Vf-5g/viewform?embedded=true"
-                                class="col-md-12 col-sm-12 border-0" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-                        </div>
-                    </div>
+
 
                     <div class="card col-md-12 col-sm-12 border-0]" style="background-color: #f0f0f0;">
                         <div class="card-body">
                             <li class="list-group-item border-0" style="background-color: #f0f0f0;">
-                                <strong>会場マップ</strong><br> 会場 Salle Mandjar （サル・マンジャー） </li>
+                                <strong>会場マップ</strong><br> 会場 三股町立文化会館 </li>
                         </div>
 
-                        <div class="card col-md-12 col-sm-12 border-0 " style="min-height: 100vh; background-color: #f0f0f0;">
+                        <div class="card col-md-12 col-sm-12 border-0 "
+                            style="min-height: 100vh; background-color: #f0f0f0;">
                             <div class="mapouter">
-                                <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                                        src="https://maps.google.com/maps?width=800&amp;height=1000&amp;hl=en&amp;q=宮崎県宮崎市船塚２丁目１７ &amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
-                                        href="https://mcpenation.com/">Minecraft Website</a></div>
-                                <style>
+                                <div class="gmap_canvas">
+                                    <iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                                    src="https://maps.google.com/maps?width=800&amp;height=1000&amp;hl=en&amp;q=宮崎県北諸県郡三股町樺山３４０４−２&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                                    </iframe>
+                                    <a href="https://connectionsgame.org/">Connections Game</a></div>
+                                    <style>
                                     .mapouter {
                                         position: relative;
                                         text-align: right;
@@ -160,7 +154,7 @@
                                         height: 1000px !important;
                                     }
                                 </style>
-                            </div>
+                                </div>
                         </div>
                     </div>
                         <div class="img-gallery fadeUpTrigger">
