added torihada labo 2023

--- a/news.html
+++ b/news.html
@@ -89,10 +89,33 @@
             <!-- /////////////////////////////////////////////////// -->
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/TORIHADALABO_hyuga.jpg" class="w-100" alt="2022 BABY JAZZ">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_19">
+                    <ul class="list-group" id="news_19">
+                        <li class="list-group-item active" aria-current="true">2023 TORIHADA LABO<br> 〜&nbsp;五感で見つける幸せな空間&nbsp;〜</li>
+                        <li class="list-group-item">会場 :日向なないろ保育園 山のホール<br>
+                            <hr>日時:2023年9月12日(火)<br>
+                            <hr>10:00開場 10:30開演<br>
+                            <hr>主催/企画制作:一般社団法人TORIHADA LABO <br>
+                            <hr>問い合わせ先:050-3138-2019 <br>
+                            <li class="list-group-item">
+                                <a href="2023torihadalabo0912.html" class="btn btn-primary">
+                                詳細はこちらをクリック
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <!-- /////////////////////////////////////////////////// -->
+            <!-- /////////////////////////////////////////////////// -->
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
                     <img src="img/naturalbeat2023.jpg" class="w-100" alt="2022 BABY JAZZ">
                 </div>
                 <div class="col-md-6 p-4 ps-md-0" id="news_18">
-                    <ul class="list-group" id="news_16">
+                    <ul class="list-group" id="news_18">
                         <li class="list-group-item active" aria-current="true">2023 Natural Beat<br> 〜&nbsp;五感で見つける幸せな空間&nbsp;〜</li>
                         <li class="list-group-item">会場 :三股町立文化会館<br>
                             <hr>日時:2023年12月3日(日)<br>
