--- a/news.html
+++ b/news.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-6 p-4 ps-md-0" id="news_19">
                     <ul class="list-group" id="news_19">
-                        <li class="list-group-item active" aria-current="true">2023 TORIHADA LABO<br> 〜&nbsp;五感で見つける幸せな空間&nbsp;〜</li>
+                        <li class="list-group-item active" aria-current="true">2023 TORIHADA LABO</li>
                         <li class="list-group-item">会場 :日向なないろ保育園 山のホール<br>
                             <hr>日時:2023年9月12日(火)<br>
                             <hr>10:00開場 10:30開演<br>
