--- a/news.html
+++ b/news.html
@@ -87,6 +87,23 @@
                 <h2 class="flipRightTopTrigger"><span>News</span>お知らせ</h2>
             </section>
             <!-- /////////////////////////////////////////////////// -->
+            <div class="container col-md-6 row g-0 bg-light mt-md-5 mb-6 mx-auto" style="float:none;margin:auto">
+                <div class="col-md-12 p-4 ps-md-0">
+                    <ul class="list-group" id="news_19">
+                        <li class="list-group-item active" aria-current="true">Natural Beat2023 公演中止のお知らせ</li>
+                        <li class="list-group-item d-flex justify-content-center">
+                            <a href="2023naturalbeat_1203.html" class="btn btn-primary">
+                            詳細はこちらをクリック
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <hr>
+            <!-- /////////////////////////////////////////////////// -->
+            <!-- /////////////////////////////////////////////////// -->
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
                     <img src="img/TORIHADALABO_hyuga.jpg" class="w-100" alt="2022 BABY JAZZ">
