changed natural beat

--- a/2023naturalbeat_1203.html
+++ b/2023naturalbeat_1203.html
@@ -103,17 +103,19 @@
             </section>
             <div class="container" style="min-height: 100vh;">
                 <div class="row">
-                    <h2 class="text-start lh-lg mb-3">
-                        平素よりご愛顧を賜りまして誠にありがとうございます。<br>
-                        一般社団法人TORIHADA LABO主催『Natural Beat 2023』公演関係者が体調不良により入院し復帰の目処が立たないため、公演の実施が困難となりました。<br>
-                        そのため、【12月3日（日）公演】を中止とさせていただきます。ご来場を楽しみにお待ちいただいたお客様、本公演実現のためにご尽力くださっている関係者の皆様に多大なご迷惑とご心配をお掛けしますことを、心よりお詫び申し上げます。
+                    <div class="mb-5">
+                        <h2 class="text-start lh-lg mb-3">
+                            平素よりご愛顧を賜りまして誠にありがとうございます。<br>
+                            一般社団法人TORIHADA LABO主催『Natural Beat 2023』公演関係者が体調不良により入院し復帰の目処が立たないため、公演の実施が困難となりました。<br>
+                            そのため、【12月3日（日）公演】を中止とさせていただきます。ご来場を楽しみにお待ちいただいたお客様、本公演実現のためにご尽力くださっている関係者の皆様に多大なご迷惑とご心配をお掛けしますことを、心よりお詫び申し上げます。
 
-                        上記公演はチケット料金の払い戻しを行います。詳細は後日、本サイトにてご案内いたします。お手続きの際に該当公演のチケットが必要となりますので、お手元にて保管くださいますようお願い申し上げます。
+                            上記公演はチケット料金の払い戻しを行います。詳細は後日、本サイトにてご案内いたします。お手続きの際に該当公演のチケットが必要となりますので、お手元にて保管くださいますようお願い申し上げます。
 
-                        何卒ご理解賜りますよう、お願い申し上げます。
-                        11月7日(火)
-                        一般社団法人TORIHADA LABO
-                    </h2>
+                            何卒ご理解賜りますよう、お願い申し上げます。
+                            11月7日(火)
+                            一般社団法人TORIHADA LABO
+                        </h2>
+                    </div>
 
                     <div class="card col-md-6 col-sm-6 border-0" style="background-color: #f0f0f0; margin: 0 auto;">
                         <img src="img/naturalbeat2023.jpg" class="card-img-top" alt="...">
