--- a/about.html
+++ b/about.html
@@ -139,10 +139,10 @@
                                     <h4 class="card-title">安藤志乃</h4>
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Shino</li>
-                                        <li class="list-group-item">Piano.Vocal.Total</li>
+                                        <li class="list-group-item">Piano.Vocal.</li>
                                         <li class="list-group-item">(一社)TORIHADA LABO代表<br> 島村楽器ヴォーカル科講師<br> 宮崎県日南市出身<br>
                                         </li>
-                                        <li class="list-group-item">子ども向けイベント出演歴<br> NPO法人みやざき子ども文化センター × 公益財団法人宮崎文化進行協会主催<br> 0歳からの親子で楽しむコンサート<br> NPO法人みやざき子ども文化センター主催<br> おいでおいで子どもフェスタ他多数 </li>
+                                        <li class="list-group-item">子ども向けイベント出演歴<br> NPO法人みやざき子ども文化センター × 公益財団法人宮崎文化進行協会主催<br> 0歳からの親子で楽しむコンサート<br> 国民文化祭「こどもの文化の祭典」他多数 </li>
                                     </ul>
                                 </div>
                             </div>
@@ -180,12 +180,27 @@
                             <div class="card border border-warning shadow">
                                 <img src="img/men02.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h4 class="card-title">谷口潤実</h4>
+                                    <h4 class="card-title">柳田裕輔</h4>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Hiromi Taniguchi</li>
+                                        <li class="list-group-item">Yusuke Yanagita</li>
+                                        <li class="list-group-item">Guitar</li>
+                                        <li class="list-group-item">洗足学園音楽大学ジャズコース卒業<br>宮崎学園高等学校普通科音楽コース非常勤講師(ギター専攻、サウンドプロデュース担当)<br> </li>
+                                        <li class="list-group-item">子ども向けイベント出演歴<br> 宮崎国際音楽祭「こどもきらめく音の祭典」<br> 音楽、演劇での宮崎県内のスクールコンサート他多数</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3 zoomInTrigger mt-5">
+                            <div class="card border border-warning shadow">
+                                <img src="img/men03.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h4 class="card-title">衛藤和洋</h4>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Yusuke Yanagita</li>
                                         <li class="list-group-item">Percussion</li>
-                                        <li class="list-group-item">OFFICE ritmo TANIGUCHI<br> 宮崎県都城市出身<br> SAMBA TEAM "Maquina do ritmo"主宰</li>
-                                        <li class="list-group-item">子ども向けイベント出演歴<br> 福岡NPO法人子供文化コミュニティ主催「親子でラテンのリズムを楽しもう！」<br> 6ヶ月～3歳のための初めての芸術　他多数</li>
+                                        <li class="list-group-item">島村楽器宮崎店ドラム科講師<br>宮崎市かのう児童センター館長<br> 宮崎県日南市出身</li>
+                                        <li class="list-group-item">子ども向けイベント出演歴<br> 宮崎県立芸術劇場主催おんがくのおもちゃ箱シリーズおとのたねバンド編<br> 国民文化祭「子どもと楽しむミュージックデイ」
+                                        <br>宮崎文化振興協会「子どものための音楽会」他、多数</li>
                                     </ul>
                                 </div>
                             </div>
